# rust-voxel-engine

./: Cargo.toml  README.md
assets/: en_us.json
src/: main.rs  main_loop.rs
src/event/: event.rs  event_bus.rs  events.rs  mod.rs
src/game/: block.rs  chunk.rs  lang.rs  mod.rs  static_data.rs
src/input/: handler.rs
src/render/: buffers.rs  camera.rs  face_lighting.rs  mod.rs  render_state.rs
src/render/util/: cube_model.rs  math.rs  mod.rs  shapes.rs  texture.rs  texture_atlas.rs  vertex.rs
src/shader/: shader.wgsl
src/util/: constants.rs
