[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
env_logger = "0.9.3"
log = "0.4.17"
wgpu = "0.14.0"
pollster = "0.2.5"
nalgebra = "0.31.4"
rgb = "0.8.34"
bytemuck = { version = "1.12.3", features = [ "derive" ] }
rustc-hash = "1.1.0"
once_cell = "1.16.0"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]
